# Life

./: .Makefile.swp  CMakeLists.txt  boardGanerator.c  boardGanerator.h  boardGenerator.c  boardGenerator.h  errorsComunicats.h  fileOperator.c  fileOperator.h  fileRead.c  fileRead.h  gameOperator.c  gameOperator.h  gameSettings.c  gameSettings.h  life.conf  main.c  pngOperator.c  pngOperator.h
spraw/: spraw.aux  spraw.tex
